cicd: Limit workflow runs
Run the build and publish container image workflow only when a
containerfile or requirements.txt is changed.

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - containerfiles/**
+      - requirements.txt
 
 env:
   REGISTRY: ghcr.io
