--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - containerfiles/**
+      - requirements.txt
+      - notebook.ipynb
 
 env:
   REGISTRY: ghcr.io
