ci: Add container workflow to monitoring changes

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/container.yaml
       - containerfiles/**
       - requirements.txt
       - notebook.ipynb
