--- a/esp8266/esp-maze.yaml
+++ b/esp8266/esp-maze.yaml
@@ -36,12 +36,15 @@ output:
     id: pwm_output_X
     pin: D3
     frequency: 50 Hz
+    min_power: 6%
+    max_power: 9%
 
   - platform: esp8266_pwm
     id: pwm_output_Y
     pin: D0
     frequency: 50 Hz
-
+    min_power: 8%
+    max_power: 10%
 
 captive_portal:
     
