--- a/esp8266/esp-maze.yaml
+++ b/esp8266/esp-maze.yaml
@@ -23,6 +23,9 @@ wifi:
     ssid: "Esp-Maze Fallback Hotspot"
     password: !secret ota_pass
 
+web_server:
+  port: 80
+
 light:
   - platform: monochromatic
     output: pwm_output_X
