--- a/ansible/setup_lab.yaml
+++ b/ansible/setup_lab.yaml
@@ -9,7 +9,61 @@
     users:
       - name: user01
         port: 10001
-        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$BWAl62q5SC30frro9dpuLg$1o6Vz34ZAUtgpTnN6C9T4UvyE24etVwoYktnqFxYVOo
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
       - name: user02
         port: 10002
-        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$BWAl62q5SC30frro9dpuLg$1o6Vz34ZAUtgpTnN6C9T4UvyE24etVwoYktnqFxYVOo
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user03
+        port: 10003
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user04
+        port: 10004
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user05
+        port: 10005
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user06
+        port: 10006
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user07
+        port: 10007
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user08
+        port: 10008
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user09
+        port: 10009
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user10
+        port: 10010
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user11
+        port: 10011
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user12
+        port: 10012
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user13
+        port: 10013
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user14
+        port: 10014
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user15
+        port: 10015
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user16
+        port: 10016
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user17
+        port: 10017
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user18
+        port: 10018
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user19
+        port: 10019
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
+      - name: user20
+        port: 10020
+        hash: argon2:$argon2id$v=19$m=10240,t=10,p=8$DcrGlnEA8W/DtxgyRauNcQ$B4Bm1hkohge5pE+U18Olv7FOP7DczOfipkEPeZxGSPs
