--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+        with:
+          lfs: true
 
       - name: Log in to container registry
         uses: docker/login-action@v2
